Only change the rename and suggest new name buttons if they have been created.

If a RenameDialog is created with M_NORENAME, the rename and suggest new name buttons are
not created, so pressing the "Apply to all" checkbox will crash when trying to access those
pointers.

BUG: 242620
FIXED-IN: 4.5.0

svn path=/trunk/KDE/kdelibs/; revision=1142461